creusot/tests/should_fail/bug/459.stderr
error: Mutually recursive functions: when calling `<A as creusot_contracts::DeepModel>::deep_model`...
  --> 459.rs:13:5
   |
13 |     fn deep_model(self) -> Self::DeepModelTy {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: then `<A as creusot_contracts::DeepModel>::deep_model` might call `<A as creusot_contracts::DeepModel>::deep_model` via the call to `creusot_contracts::std::boxed::<impl creusot_contracts::DeepModel for std::boxed::Box<T, A>>::deep_model`.
  --> 459.rs:15:28
   |
15 |             A::Cons(a) => *a.deep_model() + 1,
   |                            ^^^^^^^^^^^^^^

error: aborting due to 1 previous error

